# kerma

./: .codedocs  .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: boost.cmake  gtest.cmake  json.cmake  llvm.cmake  spdlog.cmake
compile-tests/: KermaAssume.h  Makefile  backprop.trc  clang-output  density  density_energy  device.bc  device.canonical.bc  device.instr.bc  device.ll  device.ptx  device.rt.bc  host.bc  host.cui  host.ll  input  momentum  notes  test_include.cuh  verbose-compile.sh
compile-tests/mk/: CudaAdvisor.mk  DeviceInstrumentation.cu  Makefile  device.bc  device.instru.bc  host.bc  input  input.cu  instr.lib  instr.lib.bc
docs/: CMakeLists.txt  Doxyfile.in  Main.md
examples/: CMakeLists.txt  test.cpp  test.cu
examples/polybench/: README.md
examples/polybench/cuda/: CMakeLists.txt  kerma-make.sh
examples/rodinia/bfs/: bfs.cu  kernel.cu
examples/rodinia/gaussian/: gaussian.cu
examples/rodinia/nn/: nn.cu
examples/rodinia/pathfinder/: pathfinder.cu
examples/simple/: simpleWrite2.cu  simpleWrite3.cu  vectorAdd.cu
include/kerma/: GenericOpts.h
include/kerma/Analysis/: DetectAssumptions.h  DetectKernels.h  DetectMemories.h  DetectMemoryAccesses.h  InferAddressSpaces.h  MemoryAccessTree.h  Names.h  Typecheck.h
include/kerma/Assume/: Assumption.h
include/kerma/Base/: Assumption.h  Dim.h  If.h  Index.h  Kernel.h  Loop.h  Memory.h  MemoryAccess.h  MemoryStmt.h  Mode.h  Node.h  Stmt.h
include/kerma/Compile/: CompilationAdjuster.h  CompileDBAdjuster.h  Compiler.h  DiagnosticConsumers.h
include/kerma/Config/: Config.h  config.h  config.h.in  version.h  version.h.in
include/kerma/Cuda/: Cuda.h  CudaDim.h  CudaKernel.h  CudaModule.h  Kernel.h  (+2 more)
input/simple/: simpleWrite1.cu  simpleWrite4.cu
lib/: CMakeLists.txt
lib/Analysis/: CMakeLists.txt  DetectAssumptions.cpp  DetectKernels.cpp  DetectMemories.cpp  DetectMemoryAccesses.cpp  InferAddressSpaces.cpp  InferDimensions.cpp  Loops.cpp  MemoryAccessTree.cpp  MemoryAccessTreeBuilder.cpp  Names.cpp  Typecheck.cpp
lib/Base/: Assumption.cpp  CMakeLists.txt  Dim.cpp  If.cpp  Index.cpp  Kernel.cpp  Loop.cpp  Memory.cpp  MemoryAccess.cpp  MemoryStmt.cpp  Mode.cpp  Node.cpp  Stmt.cpp
lib/Compile/: CMakeLists.txt  CompilationAdjuster.cpp  CompileDBAdjuster.cpp  Compiler.cpp  DiagnosticConsumers.cpp
lib/Cuda/: CMakeLists.txt  Kernel.cpp
lib/NVVM/: CMakeLists.txt  NVVM.cpp  NVVMUtilities.cpp
lib/Pass/: CMakeLists.txt  DetectKernels.cpp  LoopInfoTestPass.cpp  MaterializeBlockThread.cpp  MaterializeDims.cpp  MaterializeGrid.cpp  MaterializeIdx.cpp
lib/RT/: CMakeLists.txt  DeviceRT.cpp  KermaRT.cpp  Math.h  MetaDriver.cpp  Util.cpp
lib/SourceInfo/: CMakeLists.txt  FunctionRangeExtractor.cpp  Functions.cpp  SourceInfo.cpp  SourceInfoAction.cpp  SourceInfoBuilder.cpp  SourceInfoExtractor.cpp  SourceInfoLocator.cpp  SourceLoc.cpp  SourceRange.cpp  StmtRangeExtractor.cpp  Util.cpp
lib/Support/: CMakeLists.txt  Demangle.cpp  FileSystem.cpp  FileUtils.cpp  Parse.cpp  SourceInfo.cpp  Version.cpp  config.h.in  version.h.in
lib/Transforms/: CMakeLists.txt  CanonLoadsAndStores.cpp  InstruMemOpPrintf.cpp  LinkDeviceRT.cpp  LinkKermaRTDevicePass.cpp  MaterializeDims.cpp  MaterializeIdx.cpp  Materializer.cpp  MetaKernels.cpp  NormLoadsAndStores.cpp  PrepareMetaDriver.cpp  SimplifyGEP.cpp  StripAnnotations.cpp
lib/Transforms/Canonicalize/: BreakConstantGEP.cpp  Canonicalizer.cpp  DeviceFunctionInliner.cpp  GepifyMem.cpp  SimplifyGEP.cpp  StripPrintf.cpp
lib/Transforms/Instrument/: InstruMemOpPrintf.cpp  InstrumentPrintf.cpp  LinkDeviceRT.cpp  MatInstrumenter.cpp
lib/Utils/: CMakeLists.txt  LLVMMetadata.cpp  LLVMShorthands.cpp
scripts/: readthedocs.sh
scripts/travis/: install_boost.sh
src/: CMakeLists.txt  GenericOpts.cpp
src/Cuda/: CMakeLists.txt  Cuda.cpp  CudaDim.cpp  CudaKernel.cpp  CudaKernelLaunch.cpp  CudaKernelLaunchConfiguration.cpp  CudaModule.cpp  CudaProgram.cpp  NVVM.cpp
src/Pass/: CMakeLists.txt
src/Pass/DetectKernels/: CMakeLists.txt  DetectKernels.cpp
src/Pass/dg/: CMakeLists.txt  DGDotPass.cpp  Dot.cpp  DotNode.cpp  DotWriter.cpp
src/Pass/memop-graph/: MemOpGraphPass.cpp
src/Pass/test-pass/: CMakeLists.txt
src/Support/: CMakeLists.txt  Demangle.cpp  FileSystem.cpp  IO.cpp  LLVMFunctionShorthands.cpp  LLVMStringUtils.cpp  NVVM.cpp  Terminal.cpp
src/cuda/: CMakeLists.txt  CudaKernel.cpp  Util.cpp
src/passes/: CMakeLists.txt
src/passes/detect-addr-space/: CMakeLists.txt  DetectAddrSpace.cpp
src/passes/detect-kernels/: DetectKernels.cpp
src/passes/dg/: DGDotPass.cpp  DotEdge.cpp
src/passes/memop-graph/: CMakeLists.txt  MemOpGraphPass.cpp
src/passes/test-pass/: kerma-test-pass.cpp
src/tools/: CMakeLists.txt  kerma-opt.cpp  kerma-run.py
test/: CMakeLists.txt
test/integration/: README.md
test/scratch/: CMakeLists.txt
test/scratch/Dot/: CMakeLists.txt  DotTest.cpp
test/scratch/SourceInfo/: CMakeLists.txt  SourceInfo.cpp  compile.sh  opt.sh
test/unit/: CMakeLists.txt  SupportNVVM.cpp
test/unit/Base/: CMakeLists.txt  DimTest.cpp  IndexTest.cpp  MemoryAccessTest.cpp  MemoryTest.cpp
test/unit/SourceInfo/: CMakeLists.txt  SourceInfoTest.cpp  SourceLocTest.cpp  SourceRangeTest.cpp
test/unit/lib/: CMakeLists.txt
test/unit/lib/Cuda/: CMakeLists.txt  TestCuda.cpp  TestCudaDim.cpp  TestCudaKernel.cpp  TestCudaKernelLaunch.cpp  TestCudaKernelLaunchConfiguration.cpp  TestCudaModule.cpp
test/unit/lib/Pass/: TestDetectKernelLaunchesPass.cpp
tools/: CMakeLists.txt  runcuda.sh
tools/exec-constants-test-tool/: ExecConstants.cpp
tools/kerma-cfg/: CMakeLists.txt  kerma-cfg.cpp
tools/kerma-opt/: README.md
tools/kermad/: CMakeLists.txt  KermadOptions.cpp  KermadOptions.h  KermadServer.cpp  KermadServer.h  Options.cpp  Options.h  RPC.h  Response.cpp  Response.h  Server.cpp  Server.h  Session.cpp  Session.h  Util.h  main.cpp
tools/range-locator/: CMakeLists.txt  range-locator.cpp
tools/rt-check/: CMakeLists.txt  rt-check.cpp
tools/rt-link/: CMakeLists.txt  rt-link.cpp
tools/test-source-info/: CMakeLists.txt  TestSourceInfo.cpp
(+92 files in other folders)
